# signal_monk

./: .gitignore  application.py  docker-compose.yaml  pyproject.toml
docker/app/: Dockerfile
templates/: index.html
