[tool.poetry]
name = "signal_monk"
version = "0.0.1"
description = "RSS Reader"
authors = ["Vladimir Manushko <manushko.vladimir@steelkiwi.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "2.3.2"
feedparser = "5.2.1"
Flask-PyMongo = "2.3.0"

[tool.poetry.dev-dependencies]
pytest = "5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
